--- a/TreasureDetector/src/css/app.css
+++ b/TreasureDetector/src/css/app.css
@@ -156,7 +156,12 @@ iframe {
 	right:0;
 	left:0;
 	bottom:0;
-	z-index:99999999;
+	z-index:99999;
+}
+
+#placeTreasureBttn {
+	position: relative;
+	z-index: 9999999;
 }
 
 #compass {
